fix: swagger base url config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,15 @@ services:
     environment:
       - PORT=3000
       - BASE_URL=http://localhost
-      - WEBHOOK_BASE_URL=https://<your-ngrok-id>.ngrok-free.app
-      - OMNO_CLIENT_ID=your-client-id
-      - OMNO_CLIENT_SECRET=your-client-secret
-    volumes:
-      - .:/app
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - WEBHOOK_BASE_URL= <Your webhook base url>
+      - OMNO_CLIENT_ID= <Your client id>
+      - OMNO_CLIENT_SECRET= <Your secret key>
+      - HOST=0.0.0.0
 
   ngrok:
     image: ngrok/ngrok
     environment:
-      - NGROK_AUTHTOKEN=
+      - NGROK_AUTHTOKEN= <Your ngrok auth token>
     command: http host.docker.internal:3000
     ports:
       - "4040:4040"
-    depends_on:
-      - app
