--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     },
     "include": [
       "src/**/*.ts"
-    ],    "exclude": ["node_modules"]
+    ],    
+    "exclude": ["node_modules"]
   }
   
