refactor: docker takes configs from dotenv

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
 BASE_URL=http://localhost
-OMNO_CLIENT_ID=
-OMNO_CLIENT_SECRET=
-WEBHOOK_BASE_URL=
+WEBHOOK_BASE_URL=https://<your-ngrok-url>.ngrok-free.app
+OMNO_CLIENT_ID=<your-client-id>
+OMNO_CLIENT_SECRET=<your-secret-key>
+NGROK_AUTHTOKEN=<your-ngrok-authtoken>
